@@ -36,6 +36,7 @@ action_func do_raw_extract;
 action_func do_fsystarfile;
 
 extern int opt_verbose;
+extern int opt_uniform_compression;
 extern int debugflag, nocheckflag;
 
 extern struct deb_version deb_format;
