@@ -232,6 +232,13 @@ Specify which compression type to use when building a package. Allowed
 values are \fIgzip\fP, \fIxz\fP, \fIbzip2\fP, \fIlzma\fP, and \fInone\fP
 (default is \fIxz\fP).
 .TP
+.B \-\-uniform\-compression
+Specify that the same compression parameters should be used for all archive
+members (i.e. \fBcontrol.tar\fP and \fBdata.tar\fP). Otherwise only the
+\fBdata.tar\fP member will use those parameters. The only supported
+compression types allowed to be uniformly used are \fInone\fP, \fIgzip\fP
+and \fIxz\fP.
+.TP
 .BI \-\-deb\-format= format
 Set the archive format version used when building (since dpkg 1.17.0).
 Allowed values are \fI2.0\fP for the new format, and \fI0.939000\fP
