@@ -45,6 +45,8 @@ dpkg (1.17.6) UNRELEASED; urgency=low
     as if -Znone had been passed, as documented. Closes: #718295
   * Add support for .deb archives with a control member not compressed
     (control.tar) or compressed with xz (control.tar.xz).
+  * Add support for creating uniformly compressed .deb archive members,
+    with the new dpkg-deb option --uniform-compression.
 
   [ Updated dpkg translations ]
   * Swedish (Peter Krefting).
